# stock_getter

./: LICENSE  README.md  README.rst  methods.txt  pyproject.toml
.github/workflows/: python_publish.yml
Code/: average.py  fibonacci.py  fin_data.py  finance_plot.py  pehist.py  pie_average_3.py  pie_finance.py  plot_google_last_month.py  plt_tp_ten_last_month.py  rollingticker.py  statements.py  stock_ex_comparison.py  stockdatafetcher.py  summary.py  trend.py  user_Compare.py  volatility.py
docs/: CHANGELOG.md  documentation.md  yfinance_methods.txt
scripts/: create_dir.ps1
src/: main.py
src/fetcher/: financial_metrics_fetcher.py  revenue_growth_fetcher.py  stock_data_fetcher.py  stock_summary_fetcher.py
src/plotter/: current_prices_ticker_display.py  financial_metrics_plotter.py  revenue_growth_plotter.py  stock_exchange_performance_plotter.py  stock_price_plotter.py  stock_volatility_plotter.py
